out.txt
   Compiling aoc2023 v0.1.0 (/Users/adam/Projects/personal/rust/aoc2023)
error[E0599]: no function or associated item named `better_extract_gear_ratio` found for struct `Day3` in the current scope
   --> src/main.rs:341:48
    |
193 | struct Day3;
    | ----------- function or associated item `better_extract_gear_ratio` not found for this struct
...
341 |                     if let Some(ratio) = Day3::better_extract_gear_ratio(i, j, &grid) {
    |                                                ^^^^^^^^^^^^^^^^^^^^^^^^^
    |                                                |
    |                                                function or associated item not found in `Day3`
    |                                                help: there is an associated function with a similar name: `extract_gear_ratio`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `aoc2023` (bin "aoc2023") due to previous error
